Fixed position - wrap_img

--- a/css/main.css
+++ b/css/main.css
@@ -656,8 +656,10 @@ footer .container-large ul li div:last-child img {
   }
 
   main .wrap_img img {
-    height: 400px;
-    padding-right: 3vw;
+    height: 35rem;
+    padding-top: 0.7rem;
+    padding-left: 44rem;
+    overflow: hidden;
   }
   main .reg_section .container-large h1 {
     font-size: 2.9rem;
@@ -1304,6 +1306,21 @@ header .container-large nav .nav_menu li a .fa-phone {
 @media (min-width: 2200px) {
   html {
     font-size: 23px;
+  }
+}
+@media (min-width: 2300px) {
+  html {
+    font-size: 24px;
+  }
+}
+@media (min-width: 2400px) {
+  html {
+    font-size: 25px;
+  }
+}
+@media (min-width: 2500px) {
+  html {
+    font-size: 26px;
   }
 }
 @media (max-width: 480px) {
