--- a/css/pages/_uzi_mobile.scss
+++ b/css/pages/_uzi_mobile.scss
@@ -76,6 +76,24 @@
   }
 }
 
+@media (min-width: 2300px) {
+  html {
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 2400px) {
+  html {
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 2500px) {
+  html {
+    font-size: 26px;
+  }
+}
+
 @media (max-width: 480px) {
 
   // Globals 
