--- a/css/pages/_uzi_tablet.scss
+++ b/css/pages/_uzi_tablet.scss
@@ -70,8 +70,10 @@
     .wrap_img {
 
       img {
-        height: 400px;
-        padding-right: 3vw;
+        height: 35rem; //
+        padding-top: .7rem; //
+        padding-left: 44rem; //
+        overflow: hidden;
       }
     }
 
